[fire-red] PokemonCard: fix broken styles

--- a/src/app/fire-red/pokemon/_components/PokemonCard/PokemonCard.module.css
+++ b/src/app/fire-red/pokemon/_components/PokemonCard/PokemonCard.module.css
@@ -17,6 +17,7 @@
   display: flex;
 
   &-text {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: end;
